[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# nom = "7"
# nom_locate = "4"
# bitvec = "0.22.3"
#itertools = "0.10.3"
#anyhow = "1.0.51"
#regex = "1.5.4"
# num = "0.4.0"

[[bin]]
name = "d01"
path = "src/d01.rs"
