[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rayon = "1.6.0"
nom = "7.1.1"
# nom_locate = "4"
# bitvec = "0.22.3"
itertools = "0.10.5"
#anyhow = "1.0.51"
# regex = "1.6.0"
# num = "0.4.0"

[[bin]]
name = "d01"
path = "src/d01.rs"

[[bin]]
name = "d02"
path = "src/d02.rs"

[[bin]]
name = "d03"
path = "src/d03.rs"

[[bin]]
name = "d04"
path = "src/d04.rs"

[[bin]]
name = "d05"
path = "src/d05.rs"

[[bin]]
name = "d06"
path = "src/d06.rs"

[[bin]]
name = "d07"
path = "src/d07.rs"

[[bin]]
name = "d08"
path = "src/d08.rs"

[[bin]]
name = "d09"
path = "src/d09.rs"

[[bin]]
name = "d10"
path = "src/d10.rs"

[[bin]]
name = "d11"
path = "src/d11.rs"

[[bin]]
name = "d12"
path = "src/d12.rs"

[[bin]]
name = "d13"
path = "src/d13.rs"

[[bin]]
name = "d14"
path = "src/d14.rs"

[[bin]]
name = "d15"
path = "src/d15.rs"

[[bin]]
name = "d17"
path = "src/d17.rs"

[[bin]]
name = "d18"
path = "src/d18.rs"

[[bin]]
name = "d21"
path = "src/d21.rs"

[[bin]]
name = "d23"
path = "src/d23.rs"
